// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile renders correctly 1`] = `
<div
  className="container"
>
  <h1>
    Profile
  </h1>
  <a
    className="btn btn-light"
    href="/Profile/undefined/business/"
    role="button"
  >
    My Business
  </a>
  <span>
     
  </span>
  <a
    className="btn btn-light"
    href="/services"
    role="button"
  >
    My Services
  </a>
  <br />
  <br />
  <form
    id="prifle-form"
    onSubmit={[Function]}
  >
    <h4>
      Legal name
    </h4>
    <div
      className="row"
    >
      <div
        className="col-6"
      >
        <label
          htmlFor="first-name"
        >
          First name
        </label>
        <input
          className="form-control"
          id="first-name"
          name="firstName"
          onChange={[Function]}
          value="Bob"
        />
      </div>
      <div
        className="col-6"
      >
        <label
          htmlFor="last-name"
        >
          Last name
        </label>
        <input
          className="form-control"
          id="last-name"
          name="lastName"
          onChange={[Function]}
          value="Wonder"
        />
      </div>
    </div>
    <br />
    <h4>
      Date of birth
    </h4>
    <div
      className="row"
    >
      <div
        className="col-4"
      >
        <input
          className="form-control"
          id="user-birthday"
          name="birthday"
          onChange={[Function]}
          type="date"
          value="1/01/1994"
        />
      </div>
    </div>
    <br />
    <h4>
      Home address
    </h4>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <label
          htmlFor="street"
        >
          Street
        </label>
        <input
          className="form-control"
          id="street"
          name="street"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <label
          htmlFor="city"
        >
          City
        </label>
        <input
          className="form-control"
          id="city"
          name="city"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-6"
      >
        <label
          htmlFor="state"
        >
          State
        </label>
        <select
          className="form-control"
          id="user-state"
          name="state"
          onChange={[Function]}
          value=""
        >
          <option
            value="AL"
          >
            AL
          </option>
          <option
            value="AK"
          >
            AK
          </option>
          <option
            value="AZ"
          >
            AZ
          </option>
          <option
            value="AR"
          >
            AR
          </option>
          <option
            value="CA"
          >
            CA
          </option>
          <option
            value="CO"
          >
            CO
          </option>
          <option
            value="CT"
          >
            CT
          </option>
          <option
            value="DE"
          >
            DE
          </option>
          <option
            value="FL"
          >
            FL
          </option>
          <option
            value="GA"
          >
            GA
          </option>
          <option
            value="HI"
          >
            HI
          </option>
          <option
            value="ID"
          >
            ID
          </option>
          <option
            value="IL"
          >
            IL
          </option>
          <option
            value="IN"
          >
            IN
          </option>
          <option
            value="IA"
          >
            IA
          </option>
          <option
            value="KS"
          >
            KS
          </option>
          <option
            value="KY"
          >
            KY
          </option>
          <option
            value="LA"
          >
            LA
          </option>
          <option
            value="ME"
          >
            ME
          </option>
          <option
            value="MD"
          >
            MD
          </option>
          <option
            value="MA"
          >
            MA
          </option>
          <option
            value="MI"
          >
            MI
          </option>
          <option
            value="MN"
          >
            MN
          </option>
          <option
            value="MS"
          >
            MS
          </option>
          <option
            value="MO"
          >
            MO
          </option>
          <option
            value="MT"
          >
            MT
          </option>
          <option
            value="NE"
          >
            NE
          </option>
          <option
            value="NV"
          >
            NV
          </option>
          <option
            value="NH"
          >
            NH
          </option>
          <option
            value="NJ"
          >
            NJ
          </option>
          <option
            value="NM"
          >
            NM
          </option>
          <option
            value="NY"
          >
            NY
          </option>
          <option
            value="NC"
          >
            NC
          </option>
          <option
            value="ND"
          >
            ND
          </option>
          <option
            value="OH"
          >
            OH
          </option>
          <option
            value="OK"
          >
            OK
          </option>
          <option
            value="OR"
          >
            OR
          </option>
          <option
            value="PA"
          >
            PA
          </option>
          <option
            value="RI"
          >
            RI
          </option>
          <option
            value="SC"
          >
            SC
          </option>
          <option
            value="SD"
          >
            SD
          </option>
          <option
            value="TN"
          >
            TN
          </option>
          <option
            value="TX"
          >
            TX
          </option>
          <option
            value="UT"
          >
            UT
          </option>
          <option
            value="VT"
          >
            VT
          </option>
          <option
            value="VA"
          >
            VA
          </option>
          <option
            value="WA"
          >
            WA
          </option>
          <option
            value="WV"
          >
            WV
          </option>
          <option
            value="WI"
          >
            WI
          </option>
          <option
            value="WY"
          >
            WY
          </option>
        </select>
      </div>
      <div
        className="col-6"
      >
        <label
          htmlFor="zip"
        >
          Zip
        </label>
        <input
          className="form-control"
          id="zip"
          name="zip"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
    <br />
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <label
          htmlFor="email"
        >
          Email
        </label>
        <input
          className="form-control"
          id="email"
          name="email"
          readOnly={true}
          value=""
        />
      </div>
    </div>
    <br />
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <input
          className="btn btn-success btn-block"
          id="submit-profile"
          type="submit"
          value="Update Account"
        />
      </div>
    </div>
    <br />
    <br />
    <br />
    <br />
  </form>
</div>
`;

exports[`User profile updates correctly 1`] = `
<div
  className="container"
>
  <h1>
    Profile
  </h1>
  <a
    className="btn btn-light"
    href="/Profile/555/business/"
    role="button"
  >
    My Business
  </a>
  <span>
     
  </span>
  <a
    className="btn btn-light"
    href="/services"
    role="button"
  >
    My Services
  </a>
  <br />
  <br />
  <form
    id="prifle-form"
    onSubmit={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  >
    <h4>
      Legal name
    </h4>
    <div
      className="row"
    >
      <div
        className="col-6"
      >
        <label
          htmlFor="first-name"
        >
          First name
        </label>
        <input
          className="form-control"
          id="first-name"
          name="firstName"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          value="Bob"
        />
      </div>
      <div
        className="col-6"
      >
        <label
          htmlFor="last-name"
        >
          Last name
        </label>
        <input
          className="form-control"
          id="last-name"
          name="lastName"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          value="Wonder"
        />
      </div>
    </div>
    <br />
    <h4>
      Date of birth
    </h4>
    <div
      className="row"
    >
      <div
        className="col-4"
      >
        <input
          className="form-control"
          id="user-birthday"
          name="birthday"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          type="date"
          value="1/01/1994"
        />
      </div>
    </div>
    <br />
    <h4>
      Home address
    </h4>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <label
          htmlFor="street"
        >
          Street
        </label>
        <input
          className="form-control"
          id="street"
          name="street"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          type="text"
          value="123 Washington St."
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <label
          htmlFor="city"
        >
          City
        </label>
        <input
          className="form-control"
          id="city"
          name="city"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          value="Boston"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-6"
      >
        <label
          htmlFor="state"
        >
          State
        </label>
        <select
          className="form-control"
          id="user-state"
          name="state"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          value="MA"
        >
          <option
            value="AL"
          >
            AL
          </option>
          <option
            value="AK"
          >
            AK
          </option>
          <option
            value="AZ"
          >
            AZ
          </option>
          <option
            value="AR"
          >
            AR
          </option>
          <option
            value="CA"
          >
            CA
          </option>
          <option
            value="CO"
          >
            CO
          </option>
          <option
            value="CT"
          >
            CT
          </option>
          <option
            value="DE"
          >
            DE
          </option>
          <option
            value="FL"
          >
            FL
          </option>
          <option
            value="GA"
          >
            GA
          </option>
          <option
            value="HI"
          >
            HI
          </option>
          <option
            value="ID"
          >
            ID
          </option>
          <option
            value="IL"
          >
            IL
          </option>
          <option
            value="IN"
          >
            IN
          </option>
          <option
            value="IA"
          >
            IA
          </option>
          <option
            value="KS"
          >
            KS
          </option>
          <option
            value="KY"
          >
            KY
          </option>
          <option
            value="LA"
          >
            LA
          </option>
          <option
            value="ME"
          >
            ME
          </option>
          <option
            value="MD"
          >
            MD
          </option>
          <option
            value="MA"
          >
            MA
          </option>
          <option
            value="MI"
          >
            MI
          </option>
          <option
            value="MN"
          >
            MN
          </option>
          <option
            value="MS"
          >
            MS
          </option>
          <option
            value="MO"
          >
            MO
          </option>
          <option
            value="MT"
          >
            MT
          </option>
          <option
            value="NE"
          >
            NE
          </option>
          <option
            value="NV"
          >
            NV
          </option>
          <option
            value="NH"
          >
            NH
          </option>
          <option
            value="NJ"
          >
            NJ
          </option>
          <option
            value="NM"
          >
            NM
          </option>
          <option
            value="NY"
          >
            NY
          </option>
          <option
            value="NC"
          >
            NC
          </option>
          <option
            value="ND"
          >
            ND
          </option>
          <option
            value="OH"
          >
            OH
          </option>
          <option
            value="OK"
          >
            OK
          </option>
          <option
            value="OR"
          >
            OR
          </option>
          <option
            value="PA"
          >
            PA
          </option>
          <option
            value="RI"
          >
            RI
          </option>
          <option
            value="SC"
          >
            SC
          </option>
          <option
            value="SD"
          >
            SD
          </option>
          <option
            value="TN"
          >
            TN
          </option>
          <option
            value="TX"
          >
            TX
          </option>
          <option
            value="UT"
          >
            UT
          </option>
          <option
            value="VT"
          >
            VT
          </option>
          <option
            value="VA"
          >
            VA
          </option>
          <option
            value="WA"
          >
            WA
          </option>
          <option
            value="WV"
          >
            WV
          </option>
          <option
            value="WI"
          >
            WI
          </option>
          <option
            value="WY"
          >
            WY
          </option>
        </select>
      </div>
      <div
        className="col-6"
      >
        <label
          htmlFor="zip"
        >
          Zip
        </label>
        <input
          className="form-control"
          id="zip"
          name="zip"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          value="02117"
        />
      </div>
    </div>
    <br />
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <label
          htmlFor="email"
        >
          Email
        </label>
        <input
          className="form-control"
          id="email"
          name="email"
          readOnly={true}
          value="bob@gmail.com"
        />
      </div>
    </div>
    <br />
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <input
          className="btn btn-success btn-block"
          id="submit-profile"
          type="submit"
          value="Update Account"
        />
      </div>
    </div>
    <br />
    <br />
    <br />
    <br />
  </form>
</div>
`;
